[gd_scene load_steps=26 format=2]

[ext_resource path="res://font_/MusticaPro-SemiBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://theme/panel_background3.tres" type="StyleBox" id=2]
[ext_resource path="res://theme/focus.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/disable.tres" type="StyleBox" id=5]
[ext_resource path="res://theme/normal.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/hover.tres" type="StyleBox" id=7]
[ext_resource path="res://script/musicFile.gd" type="Script" id=8]
[ext_resource path="res://script/musicPlayer.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.00392157, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.0352941, 0.423529, 1 )

[sub_resource type="DynamicFont" id=10]
size = 33
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 43
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0627451, 0.00392157, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.168627, 0.0196078, 0.239216, 1 )

[sub_resource type="DynamicFont" id=19]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=23]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 1 )

[node name="musicPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 69.0
margin_right = -63.0
margin_bottom = -68.0
rect_min_size = Vector2( 208, 216 )
script = ExtResource( 10 )

[node name="MainWindow" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -617.0
rect_min_size = Vector2( 216, 216 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="tittleBar" type="Panel" parent="MainWindow"]
anchor_right = 1.0
margin_bottom = 33.443
rect_min_size = Vector2( 200, 33.443 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 2 )

[node name="Tittle" type="Label" parent="MainWindow/tittleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = 4.557
rect_min_size = Vector2( 176, 32 )
custom_fonts/font = SubResource( 10 )
text = "GnuChan Defaul  Beta 0000.1"
align = 1
valign = 1

[node name="close" type="Button" parent="MainWindow/tittleBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = 8.557
rect_min_size = Vector2( 22.664, 33.255 )
input_pass_on_modal_close_click = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "X"

[node name="bottomBar" type="Panel" parent="MainWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 43.0
margin_right = -9.0
margin_bottom = -8.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 8 )

[node name="leftPanel" type="Control" parent="MainWindow/bottomBar"]
margin_left = 16.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 696.0

[node name="background" type="Panel" parent="MainWindow/bottomBar/leftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="Panel" type="Panel" parent="MainWindow/bottomBar/leftPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 18 )

[node name="LoopMusic" type="Button" parent="MainWindow/bottomBar/leftPanel/Panel"]
margin_left = 24.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Loop Music"

[node name="stop" type="Button" parent="MainWindow/bottomBar/leftPanel/Panel"]
margin_left = 160.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Stop"

[node name="play" type="Button" parent="MainWindow/bottomBar/leftPanel/Panel"]
margin_left = 296.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "play"

[node name="Panel2" type="Panel" parent="MainWindow/bottomBar/leftPanel"]
margin_left = 16.0
margin_top = 80.0
margin_right = 480.0
margin_bottom = 664.0
custom_styles/panel = SubResource( 18 )

[node name="line1" type="Panel" parent="MainWindow/bottomBar/leftPanel/Panel2"]
margin_right = 16.0
margin_bottom = 584.0
custom_styles/panel = SubResource( 22 )

[node name="line2" type="Panel" parent="MainWindow/bottomBar/leftPanel/Panel2"]
margin_left = 448.0
margin_right = 464.0
margin_bottom = 584.0
custom_styles/panel = SubResource( 22 )

[node name="playerList" type="ScrollContainer" parent="MainWindow/bottomBar/leftPanel/Panel2"]
margin_left = 40.0
margin_top = 32.0
margin_right = 424.0
margin_bottom = 568.0

[node name="GridContainer" type="GridContainer" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList"]
margin_right = 321.0
margin_bottom = 51.0
columns = 2

[node name="music1" type="VBoxContainer" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer"]
margin_right = 101.0
margin_bottom = 51.0

[node name="music1" type="Label" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music1"]
margin_right = 101.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 23 )
text = "90'S  Music"

[node name="playmusic1" type="Button" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music1"]
margin_top = 30.0
margin_right = 101.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 24 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Play"

[node name="music2" type="VBoxContainer" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer"]
margin_left = 105.0
margin_right = 321.0
margin_bottom = 51.0

[node name="music1" type="Label" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music2"]
margin_right = 216.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 23 )
text = "This is Test Music Music"

[node name="testMusic" type="Button" parent="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music2"]
margin_top = 30.0
margin_right = 216.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 25 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Play"

[node name="musicPlayer" type="AudioStreamPlayer" parent="MainWindow/bottomBar"]

[connection signal="pressed" from="MainWindow/tittleBar/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/leftPanel/Panel/LoopMusic" to="." method="_on_LoopMusic_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/leftPanel/Panel/stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/leftPanel/Panel/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music1/playmusic1" to="." method="_on_playmusic1_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/leftPanel/Panel2/playerList/GridContainer/music2/testMusic" to="." method="_on_testMusic_pressed"]
